<resources>

    <string name="app_name">Okis</string>

    <string name="crea">CREA</string>
    <string name="comparte">COMPARTE</string>
    <string name="Descubre">DESCUBRE</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tengo_cuenta_aun">No tengo cuenta aún</string>


    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="registrarme">Registrarme</string>

    <string name="facebook_app_id">128624887823163</string>

    <string name="informacion">Información</string>
    <string name="error">Error</string>
    <string name="hemos_obtenido_tus_datos">Hemos obtenido tus datos</string>
    <string name="no_hemos_obtenido_tus_datos">Hubo un error al tratar de obtener tus datos</string>

    <string name="completa_password">La contraseña debe tener al menos 8 dígitos</string>
    <string name="completa_nombre">Ingresa tus nombres</string>
    <string name="completa_apellido">Ingresa tus apellidos</string>
    <string name="validar_email">Ingresa un email válido</string>
    <string name="password_no_coincide">La contraseña no coincide</string>

    <string name="no_se_pudo_crear_cuenta">No hemos podido crear una cuenta con este correo electrónico.</string>
    <string name="cuenta_creada_correctamente">Te haz registrado correctamente</string>

    <string name="ingresa_codigo_confirmacion">Ingresa el código de confirmación</string>
    <string name="usuario_confirmado">Codigo de confirmación aceptado</string>
    <string name="usuario_no_confirmado">Código de confirmación no válido</string>
    <string name="reenviar_codigo">Reenviar código de confirmación</string>
    <string name="codigo_reenviado">Hemos enviado el código de confirmación nuevamente</string>
    <string name="problema_al_reenviar_codigo">No hemos podido reenviar el código</string>

    <string name="cognito_pool_id">us-east-1_qwGIgZvnh</string>
    <string name="cognito_client_id">1b5b2991pldd2d9260g0hdggqa</string>
    <string name="cognito_secret">1ghj7ldsa8odpmuf3oc7n0qsftfegbhiol0a4oih4inaamd4jkd1</string>

    <string name="reenviar_codigo_pregunta">¿Tienes un problema con el código?.</string>
    <string name="reenviar_boton">Reenviar</string>
    <string name="cancelar">Cancelar</string>

    <string name="continuar">Continuar</string>

</resources>
