<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no_tengo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:text="@string/ya_tengo_cuenta"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_borde_redondeado"
        android:text="@string/registrarme"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/nombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlanco"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlanco"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombres" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlanco"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlanco"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/gmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/no_tengo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/ingresa_codigo_confirmacion"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresar" />

    <Button
        android:id="@+id/reenviar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/boton_borde_redondeado"
        android:text="@string/reenviar_codigo"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cd">

        <EditText
            android:id="@+id/n1"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/n2"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/n3"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/n4"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/n5"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/n6"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="#"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorBlanco"
            android:textSize="22sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>